# rslibs

./: .gitignore  Makefile  README.md  appveyor.yml  rslibs.sln
.github/workflows/: ci.yml
Implicit/: Implicit.vcxproj  Makefile  impSurface.h
Rgbhsl/: Makefile  Rgbhsl.cpp  Rgbhsl.h  Rgbhsl.vcxproj
rsMath/: Makefile  rsMath.vcxproj  rsVec.cpp  rsVec.h
rsText/: Makefile  rsText.vcxproj
rsUtility/: catmullRom.h  rsUtility.vcxproj  rsUtility.vcxproj.filters
rsWin32Saver/: rsWin32Saver.cpp  rsWin32Saver.h  rsWin32Saver.vcxproj
rsXScreenSaver/: Makefile
tests/: CMakeLists.txt  test_Implicit.cpp  test_Rgbhsl.cpp  test_ribbons.cpp  test_rsMath.cpp  test_rsTrigonometry.cpp  test_rsUtility.cpp
